# Django-Backend

./: README.md  pyproject.toml
src/app/: admin.py  filter_backends.py  models.py  serializers.py  urls.py  views.py
src/app/fixtures/: bulk_companies.json  unit_test.json
src/app/migrations/: 0001_initial.py
src/app/tests/models/: test_company.py  test_product.py  test_transaction.py
src/app/tests/views/: test_companies.py
src/app/tests/views/fixtures/: list_companies_UserABC001.json  list_companies_UserABCFXC1.json  list_companies_admin.json  list_companies_filter_code__icontains.json  list_companies_filter_combined.json  list_companies_filter_name.json  list_companies_filter_name__icontains.json  list_companies_page_1.json  list_companies_page_2.json  list_companies_page_3.json  list_companies_page_size.json  list_companies_user.json
src/service/: pagination.py  settings.py  urls.py  wsgi.py
