[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["Shaun Harrison <shaun.harrison@live.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-rest-framework = "^0.1.0"
drf-nested-routers = "^0.94.1"
boto3 = "^1.35.32"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
gunicorn = "^23.0.0"
psycopg = "^3.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
